spade-tests/src/snapshots/spade_tests__integration__trait_tests__ast_lowering_errors_are_caught_in_impl_blocks.snap
---
source: spade-tests/src/integration.rs
---
struct X {}

impl X {
    fn x(self) {
        a
    }
}


error: Use of undeclared name a
  ┌─ testinput:5:9
  │
5 │         a
  │         ^ Undeclared name


