spade-tests/src/snapshots/spade_tests__integration__trait_tests__blanket_impl_is_disallowed_gracefully.snap
---
source: spade-tests/src/integration.rs
---
impl<T> T {
    fn method(self) {}
}


error: Impl blocks cannot currently be used on generic types
  ┌─ testinput:1:9
  │
1 │ impl<T> T {
  │      -  ^ Impl on generic type
  │      │   
  │      T defined here
