spade-tests/src/snapshots/spade_tests__integration__trait_tests__conflicting_method_impls_are_disallowed_inner_generic.snap
---
source: spade-tests/src/integration.rs
---
impl<T> uint<T> {
    fn method(self) {}
}

impl uint<16> {
    fn method(self) {}
}


error: uint already has a method named method
  ┌─ testinput:6:5
  │
2 │     fn method(self) {}
  │     ------------------ Previous definition here
  ·
6 │     fn method(self) {}
  │     ^^^^^^^^^^^^^^^^^^ Duplicate method
