spade-tests/src/snapshots/spade_tests__integration__trait_tests__conflicting_method_impls_are_disallowed_inner_tuple.snap
---
source: spade-tests/src/integration.rs
---
struct X<T> {}
impl<T> X<T> {
    fn method(self) {}
}

impl X<(bool, bool)> {
    fn method(self) {}
}


error: X already has a method named method
  ┌─ testinput:7:5
  │
3 │     fn method(self) {}
  │     ------------------ Previous definition here
  ·
7 │     fn method(self) {}
  │     ^^^^^^^^^^^^^^^^^^ Duplicate method
