spade-tests/src/snapshots/spade_tests__integration__trait_tests__duplicate_method_causes_error.snap
---
source: spade-tests/src/integration.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: X already has a method named a
  ┌─ testinput:8:5
  │
4 │     fn a(self) -> bool {true}
  │     ------------------------- Previous definition here
  ·
8 │     fn a(self) -> bool {true}
  │     ^^^^^^^^^^^^^^^^^^^^^^^^^ Duplicate method


